developer/src/kmc/test/fixtures/invalid-projects/error_file_type_not_found__model_kps.kpj
<?xml version="1.0" encoding="utf-8"?>
<KeymanDeveloperProject>
  <Options>
    <BuildPath>$PROJECTPATH</BuildPath>
    <CompilerWarningsAsErrors>False</CompilerWarningsAsErrors>
    <WarnDeprecatedCode>False</WarnDeprecatedCode>
    <CheckFilenameConventions>False</CheckFilenameConventions>
    <ProjectType>lexicalmodel</ProjectType>
  </Options>
  <Files>
    <File>
      <ID>error_file_type_not_found_mdl_kps_1</ID>
      <Filename>error_file_type_not_found__model_kps.model.ts</Filename>
      <Filepath>error_file_type_not_found__model_kps.model.ts</Filepath>
      <FileVersion></FileVersion>
      <FileType>.model.ts</FileType>
      <Details>
        <Name>error_file_type_not_found__model_kps</Name>
        <Copyright>Copyright (C) Keyman Team</Copyright>
      </Details>
    </File>
    <!-- ERROR_FileTypeNotFound (BuildModelInfo; .kps) -->
  </Files>
 </KeymanDeveloperProject>
